<resources>
    <string name="app_name">GAC</string>
    <string name="name_of_brigde">Name of Brigde</string>
    <string name="select_location_message">Select the bridge in the plan</string>
    <string name="register_brigde">Registered Bridge</string>
    <string name="do_you_want_to_detele">¿Seguro que quieres eliminar</string>
    <string name="delete_brigde">Delete Brigde</string>
    <string name="yes">Yes</string>
    <string name="not">Not</string>
    <string name="delete_inspection">Delete Inspection</string>
    <string name="delete_inspector">Delete Inspector</string>
    <string name="do_you_want_to_modify">Are you sure you want to modify?</string>
    <string name="modify_brigde">Modify Bridge</string>
    <string name="brigde_modify_error">An error has occurred. Check that the data is valid</string>
    <string name="inspection_created">Inspection Created successfully</string>
    <string name="assigned_to_brigde">Assigned to the bridge</string>
    <string name="more_register_inspection">If you click on the "Cancel" button, you will be able to register more inspections on this bridge until you click on "Cancel".</string>
    <string name="ok">Accept</string>
    <string name="photo">photo</string>
    <string name="jpeg">jpeg</string>
    <string name="modify_inspector">Modificar Inspector</string>
    <string name="inspector_create_ok">Inspector creado con éxito</string>
    <string name="inspector_error">An error has occurred. Check that the data is valid</string>
    <string name="brigde_error">An error has occurred. Check that the data is valid</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="year_build">Years Build:</string>
    <string name="number_vain">Number of Vain:</string>
    <string name="number_staples">Stapes:</string>
    <string name="platform">Platform:</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="brigde">Brigde :</string>
    <string name="id_inspector">Id Inspector:</string>
    <string name="vain">Vain</string>
    <string name="stape">Stape</string>
    <string name="damage">Damage:</string>
    <string name="positive">Favorable</string>
    <string name="comment">Comment:</string>
    <string name="surname">Surname</string>
    <string name="number_license">Number of License:</string>
    <string name="dni">DNI:</string>
    <string name="company">Company:</string>
    <string name="inspector_registration_form">Inspector Registration Form</string>
    <string name="list_of_brigde">List of Brigde</string>
    <string name="add">Añadir</string>
    <string name="list_of_inspector">List of Inspector</string>
    <string name="list_of_inspection">List of Inspection</string>
    <string name="number_of_vain">Number of Vain</string>
    <string name="number_of_stapes">Number of Stapes</string>
    <string name="details">Details</string>
    <string name="register_of_inspection">Register an Inspection</string>
    <string name="name_brigde">Name of Brigde:</string>
    <string name="inspector">Inspector :</string>
    <string name="photo_">photo_</string>
    <string name="ad_inspector">Añadir Inspector</string>
    <string name="add_brigde">Añadir Puente</string>
    <string name="back">Back</string>
    <string name="register_inspection_with_id">To register an inspection you need your ID</string>
    <string name="shearch_id_inspector">You can consult it in the list of inspectors once you have registered.</string>
    <string name="Accept">Accept</string>
    <string name="modify_inspectio">modify Inspection</string>
    <string name="not_modify_bridge_and_inspector">Modification of the bridge and the inspection inspector is not allowed</string>
    <string name="modication_notice">Modification notice</string>
    <string name="modify_inspection">Modify Inspection</string>
</resources>