<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectionModifyActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_modify_inspection_brige_id"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/brigde" />

    <TextView
        android:id="@+id/tv_modify_brige_id_add_inspection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout2"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

<TextView
    android:id="@+id/tv_details_insp_inspector_id"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/id_inspector" />

<TextView
    android:id="@+id/tv_modify_inspection_inspector_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number" />
</LinearLayout>


<LinearLayout
android:id="@+id/linearLayout3"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

<TextView
    android:id="@+id/tv_modify_checkbox_vain"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/vain" />

<CheckBox
    android:id="@+id/cb_modify_checkBox_vain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:checked="false"
    android:clickable="true"
    android:text="CheckBox" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout4"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

<TextView
    android:id="@+id/tv_modify_checkbox_stapes"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/stape" />

<CheckBox
    android:id="@+id/cb_modify_checkBox_stapes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:text="CheckBox" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout5"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
tools:layout_editor_absoluteX="10dp">

<TextView
    android:id="@+id/tv_modify_ins_damage"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:text="@string/damage" />

<EditText
    android:id="@+id/et_modify_inspection_damage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout6"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

<TextView
    android:id="@+id/tv_modify_checkbox_platform"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/platform" />

<CheckBox
    android:id="@+id/cb_modify_checkBox_platform"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:text="CheckBox" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout7"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

<TextView
    android:id="@+id/tv_modify_checkbox_condition"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/positive" />

<CheckBox
    android:id="@+id/cb_modify_checkBox_condition"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:clickable="true"
    android:text="CheckBox" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout8"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="5dp"
android:orientation="horizontal"
app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
tools:layout_editor_absoluteX="10dp">

<TextView
    android:id="@+id/tv_modify_ins_comment"
    android:layout_width="125dp"
    android:layout_height="wrap_content"
    android:text="@string/comment" />

<EditText
    android:id="@+id/et_modify_inspection_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPersonName" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/modify_save_inspection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="modifyButtonInspection"
            android:padding="5dp"
            android:text="@string/save"
            app:icon="@android:drawable/ic_menu_save" />

        <Button
            android:id="@+id/back_button_inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goBackButtonModifyInspection"
            android:padding="5dp"
            android:text="@string/cancel"
            app:icon="@android:drawable/ic_menu_set_as" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>