<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectorDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:padding="5dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_inspector_name_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/surname"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:padding="5dp"
            android:text="@string/surname" />

        <TextView
            android:id="@+id/tv_inspector_surname_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/number_license"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:padding="5dp"
            android:text="@string/number_license" />

        <TextView
            android:id="@+id/tv_inspector_number_license_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:id="@+id/dni"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:padding="5dp"
            android:text="@string/dni" />

        <TextView
            android:id="@+id/tv_inspector_dni_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/company"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#03A9F4"
            android:padding="5dp"
            android:text="@string/company" />

        <TextView
            android:id="@+id/tv_inspector_company_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_delete_inspector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:clickable="true"
            android:layoutDirection="ltr"
            app:backgroundTint="#F40F0F"
            app:srcCompat="@drawable/ic_delete_forever" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_modify_inspector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_edit_24" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>